# virome-qc

./: .gitignore  BENCHMARK_DATASETS.md  Cargo.toml  DEDUPLICATION.md  ERV_ANALYSIS_DESIGN.md  EVE_MAP_DESIGN.md  HOST_DEPLETION.md  LAB_CONTAMINANT_DESIGN.md  PARAMETER_OPTIMIZATION.md  PUBLICATION_PLAN.md  README.md  RRNA_SCREENING.md  TODO.md  VALIDATION.md  VIROFORGE_INTEGRATION.md
.github/workflows/: ci.yml
htcf/: README.md  collect_results.py  merge_comparison.sh  run_benchmark.sh  run_tier1.sh  setup.sh
profiles/: short-read-nebnext-host.yaml  short-read-nebnext.yaml  stool-vlp-tagmentation.yaml
report-ui/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
report-ui/src/: App.tsx  index.css  main.tsx  types.ts
scripts/: adapter_sweep.py  complexity_sweep.py  contaminant_sweep.py  dedup_sweep.py  erv_correlation_analysis.py  fastp_comparison.sh  generate_viroforge_references.py  generate_viroforge_references.sh  host_sweep.py  quality_sweep.py  regenerate_benchmarks.py  rrna_sweep.py
src/: lib.rs  main.rs
src/config/: mod.rs  profiles.rs
src/corpus/: generator.rs  labels.rs  mod.rs  sequences.rs
src/ingest/: markers.rs  mod.rs  overrides.rs  platform.rs  scan.rs
src/modules/: adapter.rs  complexity.rs  contaminant.rs  contaminant_refs.rs  dedup.rs  dedup_streaming.rs  erv.rs  erv_classifier.rs  erv_pipeline.rs  erv_refs.fa  erv_sequences.rs  host.rs  length.rs  merge.rs  mod.rs  nfilter.rs  polyx.rs  qa_stats.rs  quality.rs  rrna.rs
src/pipeline/: executor.rs  mod.rs  record.rs
src/report/: batch.rs  (+3 more)
tests/: integration.rs
(+4 files in other folders)
